# bricksflow

./: .env.dist  .gitignore  .gitlab-ci.yml  .pylintrc  LICENSE  README.md  check-crlf.sh  compare_configs.py  container_init_dev.py  container_init_prod.py  env-init.sh  environment.yml  pylint.sh  pyproject.toml  run_tests.sh
.cicd/: master-pipeline.yml
.cicd/templates/: bricksflow-cd.yml  bricksflow-ci.yml  datafactory-cd.yml  datafactory-ci.yml
.github/workflows/: main.yml
datafactory/deployment/: config-dev.json  config-test.json
datafactory/factory/: __factory__.json  adap-cz-adi-adf-dev.json
datafactory/linkedService/: AzureDatabricks.json  AzureKeyVault.json
datafactory/pipeline/: CovidPipeline.json
datafactory/trigger/: trigger.json
src/__myproject__/: AppTest.py  ContainerInit.py  ContainerInitTest.py  ContainerTest.py  Kernel.py  libRoot.py
src/__myproject__/_config/: config.yaml  config_dev.yaml  config_prod.yaml  config_test.yaml
src/__myproject__/_config/bundles/: databricksbundle.yaml  datalakebundle.yaml  dbxdeploy.yaml
src/__myproject__/app/: init.py  install_master_package.py
src/__myproject__/bronze/covid/tbl_template_1_mask_usage/: bricksflow_overview.py  schema.py  tbl_template_1_mask_usage.py
src/__myproject__/bronze/covid/tbl_template_2_confirmed_cases/: csv_schema.py  schema.py  tbl_template_2_confirmed_cases.py
src/__myproject__/gold/features/: feature.py  features_customer.py
src/__myproject__/gold/reporting/tbl_template_4_mask_usage_per_county/: schema.py  tbl_template_4_mask_usage_per_county.py
src/__myproject__/gold/solutions/template_5_solution/: schema.py  template_5_solution.py
src/__myproject__/silver/covid/tbl_template_3_mask_usage/: schema.py  tbl_template_3_mask_usage.py
src/__myproject__/solutions/: spark_test.py
src/myproject/: ContainerInit.py  ContainerInitTest.py  DatabricksConnectTest.py
src/myproject/_config/: config.yaml  config_dev.yaml  config_test.yaml
src/myproject/app/: init.py  install_master_package.job.py  install_master_package.py
src/myproject/solutions/: spark_test.py
