[tool.poetry]
name = "t__myproject__t"
version = "1.0"
description = "Daipe project skelefon"
readme = "README.md"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml", "*.json"]

packages = [
    { include = "__myproject__", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
pandas = "1.0.1"
numpy = "1.18.1"
injecta = ">=0.10.0b1"
databricks-bundle = ">=0.8.0a3"
datalake-bundle = ">=0.6.0a2"

[tool.poetry.dev-dependencies]
databricks-connect = ">=7.3.7"
black = "^20.8b1"
poethepoet = ">=0.9.0,<1.0.0"
flake8 = "^3.8"
pep8-naming = ">=0.11.1,<1.0.0"
pyfony-core = ">=0.8.0b1"
dbx-deploy = ">=0.14.0a2,<0.14.0b1"

[pyfony.bootstrap]
root_module_name = "__myproject__"
allowed_environments = ["dev", "test", "prod"]

[tool.black]
line-length = 140

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
flake8 = "flake8 --ignore=E501,W503 src"
container-check = "python src/__myproject__/ContainerTest.py"
